--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -49,6 +49,7 @@
                     android:textSize="13sp" />
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/subway_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
