+ [fix] Layout color temporary fix

--- a/app/src/main/res/layout/layout_start_line.xml
+++ b/app/src/main/res/layout/layout_start_line.xml
@@ -15,7 +15,7 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/gray" />
+                android:background="#3700B3" />
 
             <View
                 android:id="@+id/start_line_circle"
