--- a/app/src/main/res/layout/layout_end_line.xml
+++ b/app/src/main/res/layout/layout_end_line.xml
@@ -14,7 +14,7 @@
                 android:layout_width="20dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="50dp"
-                android:background="@color/gray" />
+                android:background="#3700B3" />
 
             <View
                 android:id="@+id/end_line_circle"
