--- a/app/src/main/res/layout/layout_pass_line.xml
+++ b/app/src/main/res/layout/layout_pass_line.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,14 +16,15 @@
                 android:layout_width="20dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="50dp"
-                android:background="#3700B3" />
+                android:background="#3700B3">
+            </View>
 
-            <View
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginStart="50dp"
+            <androidx.cardview.widget.CardView
+                android:layout_width="19dp"
+                android:layout_height="19dp"
+                android:layout_marginStart="50.2dp"
                 android:layout_marginTop="15dp"
-                android:background="@drawable/circle_line" />
+                app:cardCornerRadius="50dp" />
         </FrameLayout>
 
         <TextView
@@ -30,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="13dp"
             android:text="@string/test"
             android:textSize="16sp" />
     </LinearLayout>
