--- a/app/src/main/res/layout/layout_start_line.xml
+++ b/app/src/main/res/layout/layout_start_line.xml
@@ -3,21 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp">
 
-            <View
-                android:id="@+id/start_line_view"
-                android:layout_width="20dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="10dp"
-                android:background="#3700B3" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="50dp"
@@ -38,18 +33,47 @@
                         android:text="@string/test"
                         android:textColor="#FFFFFF"
                         android:textStyle="bold" />
+
                 </FrameLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="20dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="50dp"
+                android:background="#3700B3"
+                app:cardCornerRadius="0dp"
+                app:cardElevation="0dp">
+
+                <View
+                    android:id="@+id/start_line_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
             </androidx.cardview.widget.CardView>
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/start_line_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="10dp"
-            android:text="@string/test"
-            android:textSize="16sp" />
-    </LinearLayout>
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/start_line_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/test"
+                android:textSize="16sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/start_line_recycler"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp" />
+
+        </LinearLayout>
+    </LinearLayout>
 </layout>
