--- a/app/src/main/res/layout/layout_start_line.xml
+++ b/app/src/main/res/layout/layout_start_line.xml
@@ -51,6 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </androidx.cardview.widget.CardView>
+
         </FrameLayout>
 
         <LinearLayout
@@ -75,5 +76,13 @@
                 android:layout_marginStart="10dp" />
 
         </LinearLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="1dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="5dp"
+            android:background="#3700B3"
+            app:cardCornerRadius="0dp"
+            app:cardElevation="0dp">
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </layout>
